# ed25519-signal

./: .travis.yml  Cargo.toml  README.md  build.rs
benches/: ed25519_benchmarks.rs
src/: constants.rs  ed25519.rs  errors.rs  ffi.rs  lib.rs  public.rs  secret.rs  signature.rs  signature_vrf.rs
src/signal/: curve25519-donna.c
src/signal/ed25519/additions/generalized/: gen_eddsa.c  gen_labelset.c  gen_labelset.h
tests/: ed25519.rs
