[package]
name = "ed25519-signal"
version = "1.0.0-pre.1"
authors = ["isis lovecruft <isis@patternsinthevoid.net>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/terorie/ed25519-signal"
homepage = "https://signal.org/docs/specifications/xeddsa/"
documentation = "https://docs.rs/ed25519-signal"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "XEdDSA and VXEdDSA signing and verification in Rust."
exclude = [ ".gitignore", "TESTVECTORS", "res/*" ]

[badges]
travis-ci = { repository = "terorie/ed25519-signal", branch = "master"}

[dependencies.libc]
version = "~0.2"

[dependencies.rand]
version = "0.6"
features = ["i128_support"]

[dependencies.failure]
version = "^0.1.1"
default-features = false

[dependencies.clear_on_drop]
version = "0.2"

[build-dependencies]
cc = "1.0.35"

[dev-dependencies]
hex = "^0.3"
bincode = "^0.9"
criterion = "0.2"
